@@ -489,12 +489,21 @@ proc_with_prefix test-thread-apply {} {
 proc_with_prefix test-info-threads {} {
     test_gdb_complete_multiple "info threads " "" "" {
 	"-gid"
+	"-stopped"
 	"ID"
     }
 
+    test_gdb_complete_multiple "info threads " "-" "" {
+	"-gid"
+	"-stopped"
+    }
+
     test_gdb_complete_unique \
-	"info threads -" \
+	"info threads -g" \
 	"info threads -gid"
+    test_gdb_complete_unique \
+	"info threads -s" \
+	"info threads -stopped"
 
     # "ID" isn't really something the user can type.
     test_gdb_complete_none "info threads I"
